--- a/deployment/base/server.yaml
+++ b/deployment/base/server.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: report-aggregator
-          image: docker-registry.labs.intellij.net/idea/report-aggregator@sha256:d4fb15211a67dc1d9cb3ffefa8ec2f1132826455bf77ca6ec96b88e74d0161b4
+          image: report-aggregator
           args: ["--victoria-metrics-server-url", "http://victoria-metrics:8428"]
           ports:
             - containerPort: 80
