do not store string id — use generated time as id for clickhouse db do not store metrics version for clickhouse — on metrics update, new db will be created

--- a/deployment/base/clickhouse.yaml
+++ b/deployment/base/clickhouse.yaml
@@ -32,7 +32,11 @@ metadata:
     app: clickhouse
 spec:
   ports:
-  - port: 9000
-    protocol: TCP
+    - name: tcp
+      port: 9000
+      protocol: TCP
+    - name: http
+      port: 8123
+      protocol: TCP
   selector:
     app: clickhouse
