--- a/deployment/base/clickhouse.yaml
+++ b/deployment/base/clickhouse.yaml
@@ -18,6 +18,8 @@ spec:
             - containerPort: 9000
               name: tcp
           readinessProbe:
+            # allow backup to be restored - do not promote
+            initialDelaySeconds: 5
             tcpSocket:
               port: 9000
           livenessProbe:
