--- a/deployment/base/nats.yaml
+++ b/deployment/base/nats.yaml
@@ -14,6 +14,9 @@ spec:
       containers:
         - name: nats
           image: nats:2.1-alpine
+          resources:
+            requests:
+              memory: 128Mi
           readinessProbe:
             tcpSocket:
               port: 4222
