simplify deployment - use ko

--- a/deployment/base/server.yaml
+++ b/deployment/base/server.yaml
@@ -14,8 +14,11 @@ spec:
     spec:
       containers:
         - name: report-aggregator
-          image: report-aggregator
-          args: ["--nats", "nats://nats:4222"]
+          image: github.com/JetBrains/ij-perf-report-aggregator/cmd/server
+          args: ["--db", "clickhouse:9000", "--nats", "nats://nats:4222"]
+          env:
+            - name: SERVER_PORT
+              value: "80"
           resources:
             requests:
               memory: 256Mi
