--- a/deployment/base/server.yaml
+++ b/deployment/base/server.yaml
@@ -22,6 +22,7 @@ spec:
           resources:
             requests:
               memory: 256Mi
+              cpu: 0.4
           ports:
             - containerPort: 80
           readinessProbe:
