migrate metabase from h2 to mysql

--- a/deployment/base/nats.yaml
+++ b/deployment/base/nats.yaml
@@ -16,10 +16,10 @@ spec:
           image: nats:2.1-alpine
           resources:
             requests:
-              memory: 128Mi
-              cpu: 0.1
+              memory: "128Mi"
+              cpu: "0.1"
             limits:
-              cpu: 0.2
+              cpu: "0.2"
           readinessProbe:
             tcpSocket:
               port: 4222
