--- a/deployment/base/server.yaml
+++ b/deployment/base/server.yaml
@@ -24,9 +24,9 @@ spec:
           resources:
             requests:
               memory: 256Mi
-              cpu: 0.4
+              cpu: "0.4"
             limits:
-              cpu: 1.1
+              cpu: "0.9"
           ports:
             - containerPort: 80
           readinessProbe:
