--- a/deployment/base/backend.yaml
+++ b/deployment/base/backend.yaml
@@ -12,21 +12,23 @@ spec:
     metadata:
       labels: *LABELS
     spec:
-      imagePullSecrets:
-        - name: regcred
       containers:
         - name: backend
-          image: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/server
-          args: ["--db", "clickhouse:9000", "--nats", "nats://nats:4222"]
+          image: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/backend
           env:
             - name: SERVER_PORT
               value: "8080"
+            - name: CLICKHOUSE
+              value: "clickhouse:9000"
+            - name: NATS
+              value: "nats://nats:4222"
           resources:
             requests:
-              memory: 256Mi
               cpu: "0.4"
+              memory: 256Mi
             limits:
               cpu: "0.9"
+              memory: 512Mi
           ports:
             - containerPort: 8080
           readinessProbe:
