--- a/deployment/base/kustomization.yaml
+++ b/deployment/base/kustomization.yaml
@@ -1,5 +1,11 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
 resources:
   - nats.yaml
   - clickhouse.yaml
   - backend.yaml
   - frontend.yaml
+  - ingress.yaml
+  # requires config collector with key data
+  - tc-collector.yaml
+commonLabels:
+  app.kubernetes.io/name: report-aggregator
