--- a/deployment/report-aggregator/templates/backend.yaml
+++ b/deployment/report-aggregator/templates/backend.yaml
@@ -2,19 +2,24 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
-  labels: &LABELS
+  labels:
     app: backend
+    {{- include "common.labels" . | nindent 4 }}
 spec:
   replicas: 2
   selector:
-    matchLabels: *LABELS
+    matchLabels:
+      app: backend
+      {{- include "common.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      labels: *LABELS
+      labels:
+        app: backend
+        {{- include "common.selectorLabels" . | nindent 8 }}
     spec:
       containers:
         - name: backend
-          image: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/backend
+          image: {{ .Values.images.backend }}
           env:
             - name: SERVER_PORT
               value: "8080"
@@ -46,6 +51,7 @@ metadata:
   name: backend
   labels:
     app: backend
+    {{- include "common.labels" . | nindent 4 }}
 spec:
   ports:
   - port: 80
@@ -53,3 +59,4 @@ spec:
     protocol: TCP
   selector:
     app: backend
+    {{- include "common.selectorLabels" . | nindent 4 }}
