--- a/deployment/clickhouse/Dockerfile
+++ b/deployment/clickhouse/Dockerfile
@@ -1,9 +1,9 @@
-FROM golang:1.15 AS builder
+FROM golang:1.16 AS builder
 WORKDIR /project/src
 ADD https://raw.githubusercontent.com/nats-io/nats.go/7192159fcab301e10f8f9c6d21b57857d501c490/examples/nats-pub/main.go .
-RUN go get -d && GOOS=linux go build -ldflags='-s -w' -o /tmp/nats-pub .
+RUN GO111MODULE=off go get -d && GO111MODULE=off GOOS=linux go build -ldflags='-s -w' -o /tmp/nats-pub .
 
-RUN cd /tmp && curl -L https://repo.clickhouse.tech/tgz/stable/clickhouse-common-static-20.12.4.5.tgz | tar xvz --strip-components=4 ./clickhouse-common-static-20.12.4.5/usr/bin/clickhouse
+RUN cd /tmp && curl -L https://repo.clickhouse.tech/tgz/stable/clickhouse-common-static-21.2.2.8.tgz | tar xvz --strip-components=4 ./clickhouse-common-static-21.2.2.8/usr/bin/clickhouse
 
 FROM ubuntu:20.04
 
