ability to specify clickhouse version on build time

--- a/deployment/clickhouse/Dockerfile
+++ b/deployment/clickhouse/Dockerfile
@@ -3,7 +3,9 @@ WORKDIR /project/src
 ADD https://raw.githubusercontent.com/nats-io/nats.go/7192159fcab301e10f8f9c6d21b57857d501c490/examples/nats-pub/main.go .
 RUN GO111MODULE=off go get -d && GO111MODULE=off GOOS=linux go build -ldflags='-s -w' -o /tmp/nats-pub .
 
-RUN cd /tmp && curl -L https://repo.clickhouse.tech/tgz/stable/clickhouse-common-static-21.2.4.6.tgz | tar xvz --strip-components=4 ./clickhouse-common-static-21.2.4.6/usr/bin/clickhouse
+ARG CH_VERSION
+
+RUN cd /tmp && curl -L https://repo.clickhouse.tech/tgz/stable/clickhouse-common-static-$CH_VERSION.tgz | tar xvz --strip-components=4 ./clickhouse-common-static-$CH_VERSION/usr/bin/clickhouse
 
 FROM ubuntu:20.04
 
