fix hangs on navigation in report analyzer

--- a/dashboard/report-visualizer/package.json
+++ b/dashboard/report-visualizer/package.json
@@ -2,15 +2,15 @@
   "name": "report-visualizer",
   "private": true,
   "dependencies": {
-    "echarts": "5.0.2",
-    "shared": "workspace:*",
     "@amcharts/amcharts4": "4.10.16",
-    "element-plus": "1.0.2-beta.33",
     "compare-versions": "^3.6.0",
+    "echarts": "5.0.2",
+    "element-plus": "1.0.2-beta.33",
     "p-queue": "^6.6.2",
     "rison-node": "^2.1.1",
-    "vue-router": "4.0.4",
-    "vue": "3.0.7"
+    "shared": "workspace:*",
+    "vue": "3.0.7",
+    "vue-router": "4.0.4"
   },
   "devDependencies": {
     "@types/debounce": "^1.2.0"
