--- a/deployment/report-aggregator/templates/ingress.yaml
+++ b/deployment/report-aggregator/templates/ingress.yaml
@@ -25,3 +25,32 @@ spec:
             backend:
               serviceName: frontend
               servicePort: 80
+---
+# oauth2
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  name: report-aggregator-oauth2
+spec:
+  tls:
+    - hosts:
+        - { { .Values.ingress.host } }
+      secretName: { { .Values.ingress.tlsSecretName } }
+  rules:
+    - host: {{ .Values.ingress.host }}
+      http:
+        paths:
+          - path: /oauth2
+            backend:
+              serviceName: report-aggregator-oauth2-proxy
+              servicePort: 4180
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: report-aggregator-oauth2-proxy
+spec:
+  type: ExternalName
+  externalName: {{ .Values.ingress.oauthExternalName }}
+  ports:
+    - port: 4180
