--- a/deployment/report-aggregator/templates/ingress.yaml
+++ b/deployment/report-aggregator/templates/ingress.yaml
@@ -31,11 +31,13 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: report-aggregator-oauth2
+  annotations:
+  {{- toYaml .Values.ingress.annotationsOauth | nindent 4 }}
 spec:
   tls:
     - hosts:
-        - { { .Values.ingress.host } }
-      secretName: { { .Values.ingress.tlsSecretName } }
+        - {{ .Values.ingress.host }}
+      secretName: {{ .Values.ingress.tlsSecretName }}
   rules:
     - host: {{ .Values.ingress.host }}
       http:
