--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@vue/eslint-config-typescript": "7.0.0",
     "eslint": "7.22.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-vue": "7.7.0",
-    "rollup": "2.41.5",
+    "eslint-plugin-vue": "7.8.0",
+    "rollup": "^2.42.2",
     "rollup-plugin-visualizer": "4.2.1",
     "sass": "1.32.8",
     "typescript": "4.2.3",
