fix: update url query on selector change, simplify clickhouse incremental backup logic

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,7 +3,7 @@ linters:
     - bodyclose
     - gocyclo
     - prealloc
-    - scopelint
+    - exportloopref
     - unconvert
     - unparam
   disable:
