chore: update deps

--- a/dashboard/report-visualizer/package.json
+++ b/dashboard/report-visualizer/package.json
@@ -4,10 +4,10 @@
   "dependencies": {
     "compare-versions": "^3.6.0",
     "echarts": "^5.0.2",
-    "element-plus": "1.0.2-beta.36",
+    "element-plus": "^1.0.2-beta.36",
     "rison-node": "^2.1.1",
     "shared": "workspace:*",
-    "vue": "3.0.10",
-    "vue-router": "4.0.5"
+    "vue": "^3.0.11",
+    "vue-router": "^4.0.5"
   }
 }
