--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "dependencies": {
     "echarts": "5.0.2",
-    "element-plus": "1.0.2-beta.36",
+    "element-plus": "^1.0.2-beta.36",
     "humanize-duration": "^3.25.1",
     "rison-node": "2.1.1",
-    "vue": "3.0.10",
-    "vue-router": "4.0.5"
+    "vue": "^3.0.11",
+    "vue-router": "^4.0.5"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.18.1"
