--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "@typescript-eslint/eslint-plugin": "4.20.0",
     "@typescript-eslint/parser": "4.20.0",
     "@vitejs/plugin-vue": "1.2.1",
-    "@vue/compiler-sfc": "3.0.10",
+    "@vue/compiler-sfc": "3.0.11",
     "@vue/eslint-config-typescript": "7.0.0",
     "eslint": "7.23.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-vue": "7.8.0",
     "rollup": "^2.44.0",
-    "rollup-plugin-visualizer": "4.2.2",
+    "rollup-plugin-visualizer": "5.3.0",
     "sass": "1.32.8",
     "typescript": "4.2.3",
     "vite": "2.1.5",
     "vite-plugin-components": "0.8.3",
     "vite-plugin-eslint": "1.1.0",
-    "vue": "3.0.10",
+    "vue": "^3.0.11",
     "vue-template-compiler": "2.6.12"
   }
 }
