--- a/deployment/report-aggregator/templates/ingress.yaml
+++ b/deployment/report-aggregator/templates/ingress.yaml
@@ -56,3 +56,27 @@ spec:
   externalName: {{ .Values.ingress.oauthExternalName }}
   ports:
     - port: 4180
+---
+# https://github.com/kubernetes/kubernetes/issues/90077 (our cluster version is 1.16, so, networking.k8s.io/v1 cannot be used)
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+  {{- toYaml .Values.ingressBackend.annotations | nindent 4 }}
+  labels:
+    app: report-aggregator
+    {{- include "common.labels" . | nindent 4 }}
+  name: report-aggregator
+spec:
+  tls:
+    - hosts:
+        - {{ .Values.ingressBackend.host }}
+      secretName: {{ .Values.ingressBackend.tlsSecretName }}
+  rules:
+    - host: {{ .Values.ingressBackend.host }}
+      http:
+        paths:
+          - path: /api/v1
+            backend:
+              serviceName: backend
+              servicePort: 80
