--- a/deployment/report-aggregator/templates/ingress.yaml
+++ b/deployment/report-aggregator/templates/ingress.yaml
@@ -66,7 +66,7 @@ metadata:
   labels:
     app: report-aggregator
     {{- include "common.labels" . | nindent 4 }}
-  name: report-aggregator
+  name: report-aggregator-api
 spec:
   tls:
     - hosts:
