--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   ],
   "scripts": {
     "serve": "vite serve",
+    "dev": "vite serve",
     "build": "vite build --emptyOutDir",
     "lint": "NODE_ENV=production eslint 'dashboard/*/src/**/*.{ts,vue}' 'jb/dashboard/src/**/*.{ts,vue}'",
     "update-deps": "pnpm update -i -r --latest"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "4.25.0",
-    "@typescript-eslint/parser": "4.25.0",
-    "@vitejs/plugin-vue": "1.2.2",
-    "@vue/compiler-sfc": "3.0.11",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "@vitejs/plugin-vue": "1.2.4",
+    "@vue/compiler-sfc": "3.1.4",
     "@vue/eslint-config-typescript": "7.0.0",
-    "eslint": "7.27.0",
+    "eslint": "7.30.0",
     "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-vue": "7.10.0",
-    "rollup": "^2.50.5",
-    "rollup-plugin-visualizer": "5.5.0",
-    "sass": "1.34.0",
-    "typescript": "4.3.2",
-    "vite": "2.3.4",
-    "vite-plugin-components": "0.10.4",
-    "vite-plugin-eslint": "1.1.1",
-    "vue": "^3.0.11",
-    "vue-template-compiler": "2.6.12"
+    "eslint-plugin-vue": "7.13.0",
+    "rollup": "^2.52.8",
+    "rollup-plugin-visualizer": "5.5.1",
+    "sass": "1.35.1",
+    "typescript": "4.3.5",
+    "vite": "2.4.1",
+    "vite-plugin-components": "0.12.1",
+    "vite-plugin-eslint": "1.3.0",
+    "vue": "3.1.4"
   }
 }
