--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -2,12 +2,12 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "element-plus": "^1.0.2-beta.55",
+    "element-plus": "1.0.2-beta.55",
     "ij": "workspace:*",
     "jb": "workspace:*",
     "report-visualizer": "workspace:*",
     "shared": "workspace:*",
-    "vue": "^3.0.11",
-    "vue-router": "^4.0.6"
+    "vue": "3.1.5",
+    "vue-router": "4.0.10"
   }
 }
