--- a/dashboard/ij/package.json
+++ b/dashboard/ij/package.json
@@ -2,9 +2,9 @@
   "name": "ij",
   "private": true,
   "dependencies": {
-    "element-plus": "^1.0.2-beta.55",
+    "element-plus": "1.0.2-beta.55",
     "shared": "workspace:*",
-    "vue": "^3.0.11",
-    "vue-router": "^4.0.6"
+    "vue": "3.1.5",
+    "vue-router": "4.0.10"
   }
 }
