--- a/dashboard/report-visualizer/package.json
+++ b/dashboard/report-visualizer/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "dependencies": {
     "compare-versions": "^3.6.0",
-    "echarts": "^5.1.2",
-    "element-plus": "^1.0.2-beta.55",
+    "echarts": "5.1.2",
+    "element-plus": "1.0.2-beta.55",
     "rison-node": "^2.1.1",
     "shared": "workspace:*",
-    "vue": "^3.0.11",
-    "vue-router": "^4.0.6"
+    "vue": "3.1.5",
+    "vue-router": "4.0.10"
   }
 }
