--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "dependencies": {
     "echarts": "5.1.2",
-    "element-plus": "^1.0.2-beta.55",
-    "humanize-duration": "^3.27.0",
+    "element-plus": "1.0.2-beta.55",
+    "humanize-duration": "3.27.0",
     "rison-node": "2.1.1",
-    "vue": "^3.0.11",
-    "vue-router": "^4.0.6"
+    "vue": "3.1.5",
+    "vue-router": "4.0.10"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.25.1"
