--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "update-deps": "pnpm update -i -r --latest"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "4.29.2",
-    "@typescript-eslint/parser": "4.29.2",
-    "@vitejs/plugin-vue": "1.4.0",
-    "@vue/compiler-sfc": "3.2.4",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
+    "@vitejs/plugin-vue": "1.9.0",
+    "@vue/compiler-sfc": "3.2.13",
     "@vue/eslint-config-typescript": "7.0.0",
     "eslint": "7.32.0",
-    "eslint-plugin-import": "2.24.1",
-    "eslint-plugin-vue": "7.16.0",
-    "rollup": "^2.56.3",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-vue": "7.18.0",
+    "rollup": "^2.57.0",
     "rollup-plugin-visualizer": "5.5.2",
-    "sass": "1.38.0",
-    "typescript": "4.3.5",
-    "vite": "2.5.0",
-    "vite-plugin-components": "0.13.2",
+    "sass": "1.42.0",
+    "typescript": "4.4.3",
+    "vite": "2.5.10",
+    "unplugin-vue-components": "0.15.2",
     "vite-plugin-eslint": "1.3.0",
-    "vue": "3.2.4"
+    "vue": "3.2.13"
   }
 }
