--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "update-deps": "pnpm update -i -r --latest"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "4.31.2",
     "@typescript-eslint/parser": "4.31.2",
     "@vitejs/plugin-vue": "1.9.0",
     "@vue/compiler-sfc": "3.2.13",
     "@vue/eslint-config-typescript": "7.0.0",
+    "autoprefixer": "^10.3.5",
     "eslint": "7.32.0",
     "eslint-plugin-import": "2.24.2",
     "eslint-plugin-vue": "7.18.0",
+    "postcss": "^8.3.7",
     "rollup": "^2.57.0",
     "rollup-plugin-visualizer": "5.5.2",
-    "sass": "1.42.0",
+    "tailwindcss": "^2.2.15",
     "typescript": "4.4.3",
-    "vite": "2.5.10",
     "unplugin-vue-components": "0.15.2",
+    "vite": "2.5.10",
     "vite-plugin-eslint": "1.3.0",
     "vue": "3.2.13"
   }
