--- a/deployment/report-aggregator/templates/clickhouse.yaml
+++ b/deployment/report-aggregator/templates/clickhouse.yaml
@@ -39,9 +39,11 @@ spec:
             requests:
               cpu: "0.5"
               memory: "1Gi"
+              ephemeral-storage: "4Gi"
             limits:
               cpu: "1"
-              memory: "3Gi"
+              memory: "4Gi"
+              ephemeral-storage: "4Gi"
           image: {{ .Values.images.clickhouse }}
           volumeMounts:
             - name: clickhouse-data
