--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
     "update-deps": "pnpm update -i -r --latest"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.1",
-    "@typescript-eslint/eslint-plugin": "4.31.2",
-    "@typescript-eslint/parser": "4.31.2",
-    "@vitejs/plugin-vue": "1.9.2",
-    "@vue/compiler-sfc": "3.2.19",
-    "@vue/eslint-config-typescript": "7.0.0",
-    "autoprefixer": "^10.3.6",
-    "eslint": "7.32.0",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-vue": "7.18.0",
-    "postcss": "^8.3.8",
-    "rollup": "^2.57.0",
+    "unplugin-auto-import": "^0.5.5",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
+    "@vitejs/plugin-vue": "2.0.1",
+    "@vue/compiler-sfc": "3.2.26",
+    "@vue/eslint-config-typescript": "10.0.0",
+    "autoprefixer": "^10.4.1",
+    "eslint": "8.6.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-vue": "8.2.0",
+    "postcss": "^8.4.5",
+    "rollup": "^2.63.0",
     "rollup-plugin-visualizer": "5.5.2",
-    "tailwindcss": "^2.2.16",
-    "typescript": "4.4.3",
-    "unplugin-vue-components": "0.15.4",
-    "vite": "2.5.10",
+    "tailwindcss": "^3.0.11",
+    "typescript": "4.5.4",
+    "unplugin-vue-components": "0.17.11",
+    "vite": "2.7.10",
     "vite-plugin-eslint": "1.3.0",
     "vue": "3.2.13"
   }
