--- a/dashboard/ij/package.json
+++ b/dashboard/ij/package.json
@@ -2,9 +2,9 @@
   "name": "ij",
   "private": true,
   "dependencies": {
-    "element-plus": "1.3.0-beta.4",
+    "element-plus": "2.1.4",
     "shared": "workspace:*",
-    "vue": "3.2.26",
-    "vue-router": "4.0.12"
+    "vue": "3.2.31",
+    "vue-router": "4.0.14"
   }
 }
