--- a/dashboard/report-visualizer/package.json
+++ b/dashboard/report-visualizer/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "dependencies": {
     "compare-versions": "^4.1.3",
-    "echarts": "5.2.2",
-    "element-plus": "1.3.0-beta.4",
+    "echarts": "5.3.1",
+    "element-plus": "2.1.4",
     "rison-node": "^2.1.1",
     "shared": "workspace:*",
-    "vue": "3.2.26",
-    "vue-router": "4.0.12"
+    "vue": "3.2.31",
+    "vue-router": "4.0.14"
   }
 }
