--- a/deployment/report-aggregator/templates/nats.yaml
+++ b/deployment/report-aggregator/templates/nats.yaml
@@ -16,9 +16,13 @@ spec:
         app: nats
         {{- include "common.selectorLabels" . | nindent 8 }}
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       containers:
         - name: nats
-          image: nats:2.1.8-scratch@sha256:58f4cc7757a15ffd8f476b74f9d5f199646235b25f85012e759f3cdf64b510a5
+          image: nats:2.7.4-scratch@sha256:5102d9ad6d58bc95c08d14e8fe54b4cb432ac9237cec01d33dcbd8e4850cf447
           resources:
             requests:
               cpu: "0.1"
