--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -3,12 +3,10 @@
   "private": true,
   "dependencies": {
     "echarts": "5.3.1",
-    "element-plus": "2.1.4",
     "humanize-duration": "3.27.1",
     "rison-node": "2.1.1",
     "vue": "3.2.31",
-    "vue-router": "4.0.14",
-    "@element-plus/icons-vue": "^1.1.4"
+    "vue-router": "4.0.14"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.1"
