--- a/dashboard/ij/package.json
+++ b/dashboard/ij/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "shared": "workspace:*",
     "vue": "3.2.31",
-    "vue-router": "4.0.14"
+    "vue-router": "4.0.14",
+    "primevue": "^3.12.2"
   }
 }
