--- a/dashboard/ij/package.json
+++ b/dashboard/ij/package.json
@@ -5,6 +5,7 @@
     "shared": "workspace:*",
     "vue": "3.2.31",
     "vue-router": "4.0.14",
-    "primevue": "^3.12.2"
+    "primevue": "^3.12.2",
+    "primeicons": "^5.0.0"
   }
 }
