--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-vue": "8.5.0",
     "postcss": "^8.4.12",
     "primevue": "^3.12.2",
+    "primeicons": "^5.0.0",
     "rollup": "^2.70.1",
     "rollup-plugin-visualizer": "5.6.0",
     "tailwindcss": "^3.0.23",
