--- a/dashboard/ij/package.json
+++ b/dashboard/ij/package.json
@@ -2,10 +2,10 @@
   "name": "ij",
   "private": true,
   "dependencies": {
+    "primeicons": "^5.0.0",
+    "primevue": "^3.12.3",
     "shared": "workspace:*",
     "vue": "3.2.31",
-    "vue-router": "4.0.14",
-    "primevue": "^3.12.2",
-    "primeicons": "^5.0.0"
+    "vue-router": "4.0.14"
   }
 }
