--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite serve",
     "build": "vite build --emptyOutDir",
+    "preview": "vite preview",
     "lint": "NODE_ENV=production eslint 'dashboard/*/src/**/*.{ts,vue}' 'jb/dashboard/src/**/*.{ts,vue}'",
     "update-deps": "pnpm update -i -r --latest"
   },
@@ -14,7 +15,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
-    "@vitejs/plugin-vue": "2.2.4",
+    "@vitejs/plugin-vue": "2.3.1",
     "@vue/compiler-sfc": "3.2.31",
     "@vue/eslint-config-typescript": "10.0.0",
     "autoprefixer": "^10.4.4",
@@ -22,16 +23,17 @@
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-vue": "8.5.0",
     "postcss": "^8.4.12",
-    "primevue": "^3.12.2",
     "primeicons": "^5.0.0",
+    "primevue": "^3.12.3",
     "rollup": "^2.70.1",
     "rollup-plugin-visualizer": "5.6.0",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.3",
-    "unplugin-auto-import": "^0.6.6",
+    "unplugin-auto-import": "^0.6.8",
     "unplugin-vue-components": "0.18.5",
-    "vite": "2.8.6",
+    "vite": "2.9.0",
     "vite-plugin-eslint": "1.3.0",
+    "vite-svg-loader": "^3.2.0",
     "vue": "3.2.31"
   }
 }
