--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -6,7 +6,9 @@
     "humanize-duration": "3.27.1",
     "rison-node": "2.1.1",
     "vue": "3.2.31",
-    "vue-router": "4.0.14"
+    "vue-router": "4.0.14",
+    "@headlessui/vue": "1.5.0",
+    "@heroicons/vue": "1.0.6"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.1"
