fix: tailwind font size configuration and inter font

--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -2,11 +2,13 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@fontsource/inter": "4.5.7",
+    "@fontsource/jetbrains-mono": "4.5.5",
     "ij": "workspace:*",
     "jb": "workspace:*",
-    "pinia": "^2.0.12",
-    "primeicons": "^5.0.0",
-    "primevue": "^3.12.3",
+    "pinia": "2.0.13",
+    "primeicons": "5.0.0",
+    "primevue": "3.12.4",
     "report-visualizer": "workspace:*",
     "shared": "workspace:*",
     "vue": "3.2.31",
