--- a/dashboard/report-visualizer/package.json
+++ b/dashboard/report-visualizer/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "dependencies": {
     "compare-versions": "^4.1.3",
-    "echarts": "5.3.1",
+    "echarts": "5.3.2",
     "rison-node": "^2.1.1",
     "shared": "workspace:*",
     "vue": "3.2.31",
-    "vue-router": "4.0.14"
+    "vue-router": "4.0.14",
+    "primeicons": "5.0.0",
+    "primevue": "3.12.4"
   }
 }
