--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -2,13 +2,15 @@
   "name": "shared",
   "private": true,
   "dependencies": {
-    "echarts": "5.3.1",
+    "@headlessui/vue": "1.5.0",
+    "@heroicons/vue": "1.0.6",
+    "echarts": "5.3.2",
+    "primevue": "3.12.4",
+    "primeicons": "5.0.0",
     "humanize-duration": "3.27.1",
     "rison-node": "2.1.1",
     "vue": "3.2.31",
-    "vue-router": "4.0.14",
-    "@headlessui/vue": "1.5.0",
-    "@heroicons/vue": "1.0.6"
+    "vue-router": "4.0.14"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.1"
