fix: use Toast instead of Message as a more appropriate component

--- a/dashboard/app/tsconfig.json
+++ b/dashboard/app/tsconfig.json
@@ -4,6 +4,7 @@
     "src/**/*.ts",
     "src/**/*.vue",
     "../shared/src/shims-vue.d.ts",
+    "../shared/src/toast-event-bus.d.ts",
     "components.d.ts"
   ]
 }
