--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -5,6 +5,7 @@
     "echarts": "5.3.2",
     "primevue": "3.12.4",
     "primeicons": "5.0.0",
+    "@heroicons/vue": "1.0.6",
     "humanize-duration": "3.27.1",
     "rison-node": "2.1.1",
     "vue": "3.2.31",
