feat: tweak saga blue theme

--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@fontsource/jetbrains-mono": "4.5.5",
+    "@fontsource/inter": "4.5.7",
     "ij": "workspace:*",
     "jb": "workspace:*",
     "primeicons": "5.0.0",
