--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.12",
     "rollup": "^2.70.1",
     "rollup-plugin-visualizer": "5.6.0",
+    "sass": "^1.50.0",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.3",
     "unplugin-vue-components": "0.18.5",
