--- a/dashboard/report-visualizer/package.json
+++ b/dashboard/report-visualizer/package.json
@@ -4,11 +4,13 @@
   "dependencies": {
     "compare-versions": "^4.1.3",
     "echarts": "5.3.2",
+    "primeicons": "5.0.0",
+    "primevue": "3.12.5",
+    "rxjs": "7.5.5",
+    "fast-equals": "3.0.1",
     "rison-node": "^2.1.1",
     "shared": "workspace:*",
-    "vue": "3.2.31",
-    "vue-router": "4.0.14",
-    "primeicons": "5.0.0",
-    "primevue": "3.12.4"
+    "vue": "3.2.32",
+    "vue-router": "4.0.14"
   }
 }
