--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -2,13 +2,15 @@
   "name": "shared",
   "private": true,
   "dependencies": {
-    "echarts": "5.3.2",
-    "primevue": "3.12.4",
-    "primeicons": "5.0.0",
     "@heroicons/vue": "1.0.6",
+    "echarts": "5.3.2",
+    "fast-equals": "3.0.1",
     "humanize-duration": "3.27.1",
+    "primeicons": "5.0.0",
+    "primevue": "3.12.4",
     "rison-node": "2.1.1",
-    "vue": "3.2.31",
+    "rxjs": "^7.5.5",
+    "vue": "3.2.32",
     "vue-router": "4.0.14"
   },
   "devDependencies": {
