--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -4,15 +4,14 @@
   "dependencies": {
     "@heroicons/vue": "1.0.6",
     "echarts": "5.3.2",
-    "fast-equals": "3.0.1",
+    "echarts-stat": "1.2.0",
+    "fast-equals": "3.0.2",
     "humanize-duration": "3.27.1",
     "primeicons": "5.0.0",
     "primevue": "3.12.6",
-    "rison-node": "2.1.1",
     "rxjs": "7.5.5",
     "vue": "3.2.33",
-    "vue-router": "4.0.14",
-    "echarts-stat": "1.2.0"
+    "vue-router": "4.0.14"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.1"
