--- a/deployment/report-aggregator/templates/ingress.yaml
+++ b/deployment/report-aggregator/templates/ingress.yaml
@@ -16,7 +16,7 @@ spec:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: /api/v1
+          - path: /api
             pathType: Prefix
             backend:
               service:
@@ -79,7 +79,7 @@ spec:
     - host: {{ .Values.ingressBackend.host }}
       http:
         paths:
-          - path: /api/v1
+          - path: /api
             pathType: Prefix
             backend:
               service:
