--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ESNext",
     "module": "CommonJS",
     "moduleResolution": "node",
     "strict": true,
@@ -17,6 +17,7 @@
     "lib": [
       "esnext",
       "dom"
-    ]
+    ],
+    "types": ["vite/client"]
   }
 }
