feat: disabled and loading state

--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -8,6 +8,7 @@
     "jb": "workspace:*",
     "primeicons": "5.0.0",
     "primevue": "3.12.6",
+    "rxjs": "8.0.0-alpha.3",
     "report-visualizer": "workspace:*",
     "shared": "workspace:*",
     "vue": "3.2.33",
