--- a/dashboard/report-visualizer/package.json
+++ b/dashboard/report-visualizer/package.json
@@ -7,7 +7,7 @@
     "fast-equals": "3.0.2",
     "primeicons": "5.0.0",
     "primevue": "3.12.6",
-    "rxjs": "7.5.5",
+    "rxjs": "8.0.0-alpha.3",
     "shared": "workspace:*",
     "vue": "3.2.33",
     "vue-router": "4.0.14"
