--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -9,7 +9,7 @@
     "humanize-duration": "3.27.1",
     "primeicons": "5.0.0",
     "primevue": "3.12.6",
-    "rxjs": "7.5.5",
+    "rxjs": "8.0.0-alpha.3",
     "vue": "3.2.33",
     "vue-router": "4.0.14"
   },
