--- a/.github/workflows/clickhouse-image-build-push.yml
+++ b/.github/workflows/clickhouse-image-build-push.yml
@@ -69,6 +69,8 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            CH_URL=v22.4.4.7-stable/clickhouse-server-22.4.4.7-amd64.tgz
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
